--- a/css/style.css
+++ b/css/style.css
@@ -12,11 +12,29 @@ Project colors
 #F1613D bzc red 
 */
 
+nav > ul {
+  list-style-type: none; /* Removes the default bullet points from the list */
+  padding: 0; /* Removes default padding around the list */
+}
+
+nav > ul > li { 
+  display: inline-block; /* Makes the list items line up next to each other horizontally (instead of stacked vertically) */
+  width: 100 
+}
+
+nav > ul > li > a {
+  padding: 0 15px;
+  text-transform: uppercase;
+  font-weight: 700;
+  color: #292929
+}
+
 header {
   background-color: #fef3dd;
   padding: 10px;
   margin: 10px;
   border-bottom: 3px solid #6E6E6E;
+  text-align: center;
 }
 
 * {
@@ -116,4 +134,12 @@ button:active { /* selected link */
 /* Layout styling */
 .container {
   padding: 0 15px;
+}
+
+#hero h1 {
+  text-align: center; /* Centers text */
+}
+
+.logo {
+  max-width: 250px;
 }
