max width for all main images

--- a/css/style.css
+++ b/css/style.css
@@ -203,9 +203,17 @@ Project colors
   main {
     padding-top: 133px;
   }
-  
+  main img {
+    max-width: 100%;
+    height: auto;
+    display: block;
+    margin: 0 auto;
+  }
+
   /* Work
      ========================================================================== */
+
+
 
   /* Footer
      ========================================================================== */
