add svg project and apply animation to the sun

--- a/css/style.css
+++ b/css/style.css
@@ -385,3 +385,16 @@ X-large devices (1440px or larger)
 ================================= */
 @media only screen and (min-width: 1440px) {
 }
+
+/* ==============================
+SVG animation
+================================= */
+
+@keyframes color-change {
+  0% {fill: #edc655;}
+  50% {fill: #fcffad;}
+  100% {fill: #f76414;}
+}
+.sun {
+  animation: 4s color-change infinite alternate linear;
+}
