--- a/css/style.css
+++ b/css/style.css
@@ -68,7 +68,7 @@ Project colors
   
   /* Links */
   a {
-    color: #3246ad; 
+    color: #292929; 
     text-decoration: none;
   }
   
@@ -79,11 +79,11 @@ Project colors
   }
   
   a:visited {
-    color: #36427f;
+    color: #292929;
   }
   
   a:active {
-    color: #18235b;
+    color: #292929;
   }
   
   /* Buttons */
@@ -397,4 +397,51 @@ SVG animation
 }
 .sun {
   animation: 4s color-change infinite alternate linear;
+}
+
+/* ==============================
+nav animation
+================================= */
+
+
+/* Top and Bottom borders come in */
+nav a::before,
+nav a::after {
+  position: absolute;
+  left: 0;
+  width: 100%;
+  height: 2px;
+  background: #292929;
+  content: "";
+  opacity: 0;
+  transition: all 0.3s ease;
+}
+
+nav a::before {
+  top: 0;
+  transform: translateY(-10px);
+}
+
+nav a::after {
+  bottom: 0;
+  transform: translateY(10px);
+}
+
+/* Animate in and land farther from the text */
+nav a:hover::before {
+  opacity: 1;
+  transform: translateY(-4px); /* more distance above text */
+}
+
+nav a:hover::after {
+  opacity: 1;
+  transform: translateY(4px);  /* more distance below text */
+}
+
+
+/* Required to make links relative for pseudo-elements */
+nav a {
+  position: relative;
+  color: #FFF; /* optional — for contrast */
+  text-decoration: none;
 }
