--- a/css/style.css
+++ b/css/style.css
@@ -187,7 +187,7 @@ Project colors
   /* Header */
   header {
     background-color: #faf6ee;
-    padding: 16px 0px 16px;
+    padding: 24px 0px 16px;
     border-bottom: 3px solid #6E6E6E;
     position: fixed;
     width: 100%;
@@ -218,8 +218,14 @@ Project colors
 .navtoggle li .icon {
   position: absolute;
   right: 0;
-  top: 2px;
+  top: -4px;
   font-size: 20px;
+}
+
+.navtoggle {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 
 /* Show items when .responsive is active */ 
@@ -242,6 +248,7 @@ Project colors
   .logo {
     max-width: 150px;
   }
+
 
   /* Hero Section
      ========================================================================== */
